#Refactor javascript code

--- a/guest/index.html
+++ b/guest/index.html
@@ -39,10 +39,10 @@
                     </div> 
                     <div class="navbar_element row no-gutters">
                         <div class="navbar-signin sign_btn">
-                            <span class="navbar-signin_btn">Đăng nhập</span>
+                            <span class="navbar-signin_btn sign_in-btn">Đăng nhập</span>
                         </div>
                         <div class="navbar-signup sign_btn">
-                            <span class="navbar-signup_btn">Đăng ký</span>
+                            <span class="navbar-signup_btn sign_up-btn">Đăng ký</span>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                             <p class="slider_description">
                                 Nơi để viết, chia sẻ những quan điểm, những câu chuyện trong cuộc sống và đó cũng có thể là những trang nhật ký!
                             </p>
-                            <span class="slider-signin">Tham gia ngay</span>
+                            <span class="slider-signin sign_in-btn">Tham gia ngay</span>
                         </div>
                     </div>
                 </div>
@@ -338,7 +338,7 @@
 
                 <div class="content-continute">
                     <span class="content-continute_text">
-                        <span class="content-continute_signin">
+                        <span class="content-continute_signin sign_in-btn">
                             Đăng nhập
                         </span>
                         để xem thêm nội dung...
@@ -426,11 +426,11 @@
                     </div>
                     <div class="modal-content-to_regiser">
                         <p>Bạn chưa có tài khoản?
-                            <span class="modal_to-register">Đăng ký</span>
+                            <span class="modal_to-register sign_up-btn">Đăng ký</span>
                         </p>
                     </div>
                     <div class="modal-content_forget__pass">
-                        <span class="forget_pass__submit">Quên mật khẩu?</span>
+                        <span class="forget_pass__submit forget_pass-btn">Quên mật khẩu?</span>
                     </div>
                 </div>
             </div>
@@ -465,7 +465,7 @@
                     </div>
                     <div class="modal-content-to_login">
                         <p>Bạn đã có tài khoản?
-                            <span class="modal_to-login">Đăng nhập</span>
+                            <span class="modal_to-login sign_in-btn">Đăng nhập</span>
                         </p>
                     </div>
                 </div>
