--- a/guest/post.html
+++ b/guest/post.html
@@ -39,10 +39,10 @@
                     </div> 
                     <div class="navbar_element row no-gutters">
                         <div class="navbar-signin sign_btn">
-                            <span class="navbar-signin_btn">Đăng nhập</span>
+                            <span class="navbar-signin_btn sign_in-btn">Đăng nhập</span>
                         </div>
                         <div class="navbar-signup sign_btn">
-                            <span class="navbar-signup_btn">Đăng ký</span>
+                            <span class="navbar-signup_btn sign_up-btn">Đăng ký</span>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                                 </textarea>
                             </div>
                             <div class="comment-form-submit">
-                                <span class="comment-form-submit-btn">Gửi</span>
+                                <span class="comment-form-submit-btn sign_in-btn">Gửi</span>
                             </div>
                         </div>
                         <div class="comment-list">
@@ -222,11 +222,11 @@
                     </div>
                     <div class="modal-content-to_regiser">
                         <p>Bạn chưa có tài khoản?
-                            <span class="modal_to-register">Đăng ký</span>
+                            <span class="modal_to-register sign_up-btn">Đăng ký</span>
                         </p>
                     </div>
                     <div class="modal-content_forget__pass">
-                        <span class="forget_pass__submit">Quên mật khẩu?</span>
+                        <span class="forget_pass__submit forget_pass-btn">Quên mật khẩu?</span>
                     </div>
                 </div>
             </div>
@@ -261,7 +261,7 @@
                     </div>
                     <div class="modal-content-to_login">
                         <p>Bạn đã có tài khoản?
-                            <span class="modal_to-login">Đăng nhập</span>
+                            <span class="modal_to-login sign_in-btn">Đăng nhập</span>
                         </p>
                     </div>
                 </div>
