add navbar admin

--- a/admin/home.html
+++ b/admin/home.html
@@ -29,14 +29,41 @@
                             </a>
                         </div>
                     </div>
-                    <div class="navbar_element navbar-search row no-gutters">
-                        <i class="navbar_back-icon fa-solid fa-arrow-left" style="display: none;"></i>
-                        <input class="navbar-search_type" type="search" placeholder="Nhập nội dung tìm kiếm">
-                        <i class="search_icon fa-solid fa-magnifying-glass"></i>
+                    <div class="navbar_element row no-gutters">
+                        <div class="navbar_element-item">
+                            <a href="#" class="navbar_element-item_link">Bài viết</a>
+                        </div>
+                        <div class="navbar_element-item">
+                            <a href="#" class="navbar_element-item_link">Thể loại</a>
+                        </div>
+                        <div class="navbar_element-item">
+                            <a href="#" class="navbar_element-item_link">Người dùng</a>
+                        </div>
+                        <div class="navbar_element-item">
+                            <a href="#" class="navbar_element-item_link"></a>
+                        </div>
+                    </div>
+                    <div class="navbar_element row no-gutters">
+                        <div class="navbar-auth">
+                            <a href="#" class="navbar-auth_link row no-gutters">
+                                <div class="navbar-auth-avt">
+                                    <img class="navbar-auth-image" src="https://images.spiderum.com/sp-thumbnails/5706f1d007a311ed8078239924ab2385.png" alt="">
+                                </div>
+                                <div class="navbar-auth-name">
+                                    <span>Cuong Nguyen</span>
+                                </div> 
+                            </a>
+
+                            <div class="navbar-auth_logout hidden-element">
+                                <span class="navbar_logout-btn">Đăng xuất</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
