--- a/client/home.html
+++ b/client/home.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/body.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     <div id="app-content">
@@ -56,8 +57,8 @@
                                 <li class="navbar-user_posts">
                                     <a href="#" class="navbar-user_post-link">Bài viết của bạn</a>
                                 </li>
-                                <li class="navbar-logout row no-gutters">
-                                    <span class="navbar-logo_btn logout_btn">Đăng xuất</span>
+                                <li class="navbar-logout logout_btn row no-gutters">
+                                    <span class="navbar-logo_btn">Đăng xuất</span>
                                     <i class="fa-solid fa-right-from-bracket"></i>
                                 </li>
                             </ul>
@@ -66,6 +67,12 @@
                 </div>
             </div>
         </div>
+
+        <div id="app-body">
+
+        </div>
     </div>
+
+    <script src="../common/js/base.js"></script>
 </body>
 </html>
