fixed to the top onclick

--- a/client/home.html
+++ b/client/home.html
@@ -68,8 +68,14 @@
             </div>
         </div>
 
-        <div id="app-body">
+        <div id="app-body" style="height: 1000px;">
 
+        </div>
+
+        <div id="to-top">
+            <div class="to-top_btn" onclick="toTheTop()">
+                <i class="fa-solid fa-angle-up"></i>
+            </div>
         </div>
     </div>
 
