--- a/guest/index.html
+++ b/guest/index.html
@@ -395,7 +395,7 @@
         </div>
 
         <div id="to-top">
-            <div class="to-top_btn">
+            <div class="to-top_btn" onclick="toTheTop()">
                 <i class="fa-solid fa-angle-up"></i>
             </div>
         </div>
