add paging home page

--- a/client/home.html
+++ b/client/home.html
@@ -368,8 +368,35 @@
             </div>
         </div>
 
-        <div id="app-paging">
-            
+        <div id="app-pagination">
+            <div class="grid wide">
+                <ul class="pagination">
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">&laquo;</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link active">1</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">2</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">3</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">4</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">5</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">6</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">&raquo;</a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <div id="app-footer">
