add paging and footer

--- a/client/category.html
+++ b/client/category.html
@@ -182,6 +182,82 @@
                 </div>
                 
             </div>
+            <div class="grid wide">
+                <ul class="pagination">
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">&laquo;</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link active">1</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">2</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">3</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">4</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">5</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">6</a>
+                    </li>
+                    <li class="pagination-item">
+                        <a href="#" class="page-link">&raquo;</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="app-footer">
+            <div class="footer-content">
+                <div class="grid wide col">
+                    <div class="footer-heading row no-gutters">
+                        <div class="footer-logo l-6 m-6">
+                            <a href="#" class="footer-logo_link">
+                                <img src="../common/image/logo.png" alt="Writing">
+                            </a>
+                        </div>
+                        <div class="footer-rules l-6 m-6">
+                            <a href="#">NGUYÊN TẮC CỘNG ĐỒNG</a>
+                        </div>
+                    </div>
+                    <div class="footer-body row no-gutters">
+                        <div class="footer-description l-6 m-6">
+                            <p>Một sản phẩm được chuẩn bị cho quá trình thực tập xin việc, không khai thác kinh doanh dưới bất kỳ hình thức nào.</p>
+                        </div>
+                        <div class="footer-contact l-6 m-6">
+                            <ul class="footer-contact_list">
+                                <li class="footer-contact_item">
+                                    <a href="mailto:cuong.fithau@gmail.com" class="footer-contact_link">
+                                        <i class="fa-solid fa-envelope"></i>
+                                        <p>cuong.fithau@gmail.com</p>
+                                    </a>
+                                </li>
+                                <li class="footer-contact_item">
+                                    <a href="tel:0865235802" class="footer-contact_link">
+                                        <i class="fa-solid fa-phone"></i>
+                                        <p>0865235802</p>
+                                    </a>
+                                </li>
+                                <li class="footer-contact_item">
+                                    <a href="https://github.com/cuonvc" class="footer-contact_link">
+                                        <i class="fa-brands fa-github"></i>
+                                        <p>cuonvc</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-copyright">
+                        <h3>&copy; Copyright 2022</h3>
+                        <p>Bản quyền thuộc về Cuong Nguyen</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div id="to-top">
