--- a/client/write.html
+++ b/client/write.html
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <div id="app-footer">
+        <div id="app-footer" style="display: none;">
             <div class="footer-content">
                 <div class="grid wide col">
                     <div class="footer-heading row no-gutters">
@@ -138,7 +138,7 @@
         </div>
     </div>
 
-    <div class="modal" id="modal-option" style="display: flex;">
+    <div class="modal" id="modal-option" style="display: none;">
         <div class="js-modal_container">
             <div class="modal-content">
                 <div class="row no-gutters">
