add logic select category

--- a/client/write.html
+++ b/client/write.html
@@ -138,7 +138,7 @@
         </div>
     </div>
 
-    <div class="modal" id="modal-option" style="display: none;">
+    <div class="modal" id="modal-option" style="display: flex;">
         <div class="js-modal_container">
             <div class="modal-content">
                 <div class="row no-gutters">
@@ -154,21 +154,21 @@
                 <div class="modal-option_categories">
                     <span class="option-categories_title">Chọn thể loại</span>
                     <div class="option-categories_list">
-                        <ul class="row no-gutters">
-                            <li>Thể thao</li>
-                            <li>Giải trí</li>
-                            <li>Chuyện</li>
-                            <li>Sách</li>
-                            <li>Công nghệ</li>
-                            <li>Game</li>
-                            <li>Review</li>
-                            <li>Du lịch</li>
+                        <ul class="row no-gutters option-categories_available">
+                            <li class="option-category_item">Thể thao</li>
+                            <li class="option-category_item">Giải trí</li>
+                            <li class="option-category_item">Chuyện</li>
+                            <li class="option-category_item">Sách</li>
+                            <li class="option-category_item">Công nghệ</li>
+                            <li class="option-category_item">Game</li>
+                            <li class="option-category_item">Review</li>
+                            <li class="option-category_item">Du lịch</li>
                         </ul>
                     </div>
                     <span class="option-categories_title">Thể loại được chọn</span>
                     <div class="option-categories_list">
-                        <ul class="row no-gutters">
-                            <li></li>
+                        <ul class="row no-gutters option-categories_select">
+                            
                         </ul>
                     </div>
                 </div>
