handle click event btn

--- a/client/write.html
+++ b/client/write.html
@@ -138,7 +138,7 @@
         </div>
     </div>
 
-    <div class="modal" id="modal-option" style="display: flex;">
+    <div class="modal" id="modal-option" style="display: none;">
         <div class="js-modal_container">
             <div class="modal-content">
                 <div class="row no-gutters">
