fix font and responsive

--- a/client/write.html
+++ b/client/write.html
@@ -177,7 +177,7 @@
                         <span class="content-cancel_btn content_btn">Hủy</span>
                     </div>
                     <div class="modal-content_btn">
-                        <span class="content-confirm_btn content_btn">Ok</span>
+                        <span class="content-confirm_btn content_btn">Tạo bài viết</span>
                     </div>
                 </div>
             </div>
