add new post btn in header

--- a/client/category.html
+++ b/client/category.html
@@ -37,6 +37,14 @@
                         <input class="navbar-search_type" type="search" placeholder="Nhập nội dung tìm kiếm">
                         <i class="search_icon fa-solid fa-magnifying-glass"></i>
                     </div> 
+                    <div class="navbar_element">
+                        <div class="navbar_new-post">
+                            <a href="./write.html" class="new-post_btn">
+                                <i class="fa-solid fa-pen"></i>
+                                <span>Viết bài</span>
+                            </a>
+                        </div>
+                    </div>
                     <div class="navbar_element row no-gutters">
                         <div class="navbar-user">
                             <div class="navbar-user_btn row no-gutters">
