--- a/client/write.html
+++ b/client/write.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/custom.css">
     <link rel="stylesheet" href="./assets/css/responsive.css">
-    <title>Ckeditor</title>
+    <title>Viết bài</title>
 </head>
 <body>
     <div id="app-content">
