fix layout footer

--- a/client/setting.html
+++ b/client/setting.html
@@ -147,7 +147,7 @@
 
         <div id="app-footer">
             <div class="footer-content">
-                <div class="grid wid12 col">
+                <div class="grid wide col">
                     <div class="footer-heading row no-gutters">
                         <div class="footer-logo l-6 m-6">
                             <a href="#" class="footer-logo_link">
