--- a/guest/index.html
+++ b/guest/index.html
@@ -72,7 +72,7 @@
                     <div class="content-title">
                         <span>BÀI VIẾT ĐÃ GHIM</span>
                     </div>
-                    <div class="content-posts_pin">
+                    <div class="content-posts_pin post_list">
                         
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                         <div class="content-title">
                             <span>MỚI NHẤT</span>
                         </div>
-                        <div class="content-posts row">
+                        <div class="content-posts post_list row">
                             
                         </div> 
                     </div>
