refactor login and auth token

--- a/client/category.html
+++ b/client/category.html
@@ -276,5 +276,7 @@
     </div>
 
     <script src="../common/js/base.js"></script>
+    <script src="./assets/js/data.header.js"></script>
+
 </body>
 </html>
