--- a/client/setting.html
+++ b/client/setting.html
@@ -201,5 +201,7 @@
     </div>
 
     <script src="../common/js/base.js"></script>
+    <script src="./assets/js/data.header.js"></script>
+
 </body>
 </html>
