--- a/client/myposts.html
+++ b/client/myposts.html
@@ -275,5 +275,7 @@
     </div>
 
     <script src="../common/js/base.js"></script>
+    <script src="./assets/js/data.header.js"></script>
+
 </body>
 </html>
