--- a/client/post.html
+++ b/client/post.html
@@ -322,5 +322,7 @@
     </div>
 
     <script src="../common/js/base.js"></script>
+    <script src="./assets/js/data.header.js"></script>
+
 </body>
 </html>
