--- a/client/write.html
+++ b/client/write.html
@@ -186,6 +186,7 @@
 
     <script src="./assets/js/main.js"></script>
     <script src="../common/js/base.js"></script>
+    <script src="./assets/js/data.header.js"></script>
 
     <script src="../ckeditor/build/ckeditor.js"></script>
     <script>
